# TenX_Day2_Research

./: .coderabbit.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  main.yml
.specify/memory/: constitution.md
contracts/: evaluation.schema.json  result.schema.json  task.schema.json
docs/: IMPLEMENTATION_GUIDE.md  Research_v1.md  Research_v2.md  Research_v3.md  architecture_diagram.md  architecture_readiness_checklist.md  architecture_strategy.md  infographic_fractal_orchestration.md  infrastructure.md  schema_conflict_resolution.md  swarm_architecture.md
research/: Research_v3.md  SRC.md  architecture_strategy.md  day1_consolidated_report.md  mcp_sense_log.txt  session_log.md  tooling_strategy.md
research/specs/: CONSTITUTION.md  SOUL.md  agent_prompts.md  commerce.md  core_functional_systems.md  core_interfaces.md  data_models.md  governance_alignment.md  infrastructure.md  mcp_protocols.md  orchestration.md  strategic_objectives.md  tasks.md
scripts/: spec_check.py
skills/: README.md
skills/skill_social_publish/: README.md
skills/skill_transaction/: README.md
skills/skill_trend_discovery/: README.md
specs/: _meta.md  canonical_schemas.md  functional.md  openclaw_integration.md  technical.md
specs/001-project-chimera/: README.md  checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/chimera/: commerce.py  db.py  (+5 more)
tests/: conftest.py  test_skills_interface.py  test_swarm.py  test_trend_fetcher.py
(+4 files in other folders)
