[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network Factory"
dependencies = [
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "mcp>=0.1.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort"
]
